--- a/openApiDocs/beta/DeviceManagement.Administration.yml
+++ b/openApiDocs/beta/DeviceManagement.Administration.yml
@@ -18483,7 +18483,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.cloudPcNotificationSetting'
             resetEnabled:
               type: boolean
-              description: 'Indicates whether an end user is allowed to reset their Cloud PC. When true, the user is allowed to reset their Cloud PC. When false, end-user initiated reset is not allowed. The default value is false.'
+              description: 'Indicates whether an end user is allowed to reset their Cloud PC. When true, the user is allowed to reset their Cloud PC. When false, end-user initiated reset isn''t allowed. The default value is false.'
               nullable: true
             restorePointSetting:
               $ref: '#/components/schemas/microsoft.graph.cloudPcRestorePointSetting'
@@ -24986,10 +24986,12 @@ components:
       properties:
         crossRegionDisasterRecoveryEnabled:
           type: boolean
+          description: 'True if an end user is allowed to set up cross-region disaster recovery for Cloud PC; otherwise, false. The default value is false.'
         disasterRecoveryNetworkSetting:
           $ref: '#/components/schemas/microsoft.graph.cloudPcDisasterRecoveryNetworkSetting'
         maintainCrossRegionRestorePointEnabled:
           type: boolean
+          description: 'Indicates whether Windows 365 maintain the cross-region disaster recovery function generated restore points. If true, the Windows 365 stored restore points; false indicates that Windows 365 doesn''t generate or keep the restore point from the original Cloud PC. If a disaster occurs, the new Cloud PC can only be provisioned using the initial image. This limitation can result in the loss of some user data on the original Cloud PC. The default value is false.'
           nullable: true
       additionalProperties:
         type: object
@@ -32989,11 +32991,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. For drive items, the display name might not always be available or up to date. For example, if a user changes their display name the API might show the new value in a future response, but the items associated with the user don''t show up as changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: 'Unique identifier for the identity or actor. For example, in the access reviews decisions API, this property might record the id of the principal, that is, the group, user, or application that''s subject to review.'
           nullable: true
       additionalProperties:
         type: object
@@ -33513,11 +33515,11 @@ components:
       properties:
         key:
           type: string
-          description: Contains the name of the field that a value is associated with.
+          description: Key.
           nullable: true
         value:
           type: string
-          description: Contains the corresponding value for the specified key.
+          description: Value.
           nullable: true
       additionalProperties:
         type: object
@@ -40289,6 +40291,7 @@ components:
       properties:
         clientAppId:
           type: string
+          description: The registration ID of the Microsoft Entra app ID associated with the teamsApp.
           nullable: true
         requiredPermissionSet:
           $ref: '#/components/schemas/microsoft.graph.teamsAppPermissionSet'
