--- a/openApiDocs/beta/Education.yml
+++ b/openApiDocs/beta/Education.yml
@@ -1015,7 +1015,11 @@ paths:
     post:
       tags:
         - education.educationClass
-      summary: Create new navigation property to categories for education
+      summary: Create educationCategories
+      description: Add one or more existing educationCategory objects to this educationAssignment. Only teachers and students can perform this operation.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/educationassignment-post-categories?view=graph-rest-beta
       operationId: education.class.assignment_CreateCategory
       parameters:
         - name: educationClass-id
@@ -1055,7 +1059,11 @@ paths:
     delete:
       tags:
         - education.educationClass
-      summary: Delete ref of navigation property categories for education
+      summary: Remove educationCategory
+      description: Remove an educationCategory from an educationAssignment. Only teachers can perform this operation.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/educationassignment-remove-category?view=graph-rest-beta
       operationId: education.class.assignment.category_DeleteEducationCategoryGraphBPreRef
       parameters:
         - name: educationClass-id
@@ -1178,7 +1186,11 @@ paths:
     post:
       tags:
         - education.educationClass
-      summary: Create new navigation property ref to categories for education
+      summary: Create educationCategories
+      description: Add one or more existing educationCategory objects to this educationAssignment. Only teachers and students can perform this operation.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/educationassignment-post-categories?view=graph-rest-beta
       operationId: education.class.assignment_CreateCategoryGraphBPreRef
       parameters:
         - name: educationClass-id
@@ -1208,7 +1220,11 @@ paths:
     delete:
       tags:
         - education.educationClass
-      summary: Delete ref of navigation property categories for education
+      summary: Remove educationCategory
+      description: Remove an educationCategory from an educationAssignment. Only teachers can perform this operation.
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/educationassignment-remove-category?view=graph-rest-beta
       operationId: education.class.assignment_DeleteCategoryGraphBPreRef
       parameters:
         - name: educationClass-id
@@ -13271,11 +13287,11 @@ paths:
     patch:
       tags:
         - education.educationUser
-      summary: Update educationUser properties
-      description: Update the properties of an educationuser object.
+      summary: Update relatedContacts
+      description: Update the relatedContact collection of an educationUser object.
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/educationuser-update?view=graph-rest-beta
+        url: https://learn.microsoft.com/graph/api/relatedcontact-update?view=graph-rest-beta
       operationId: education_UpdateUser
       parameters:
         - name: educationUser-id
@@ -18859,6 +18875,7 @@ components:
             excusedDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
+              description: 'Moment in time when the submission was moved to the excused state. The timestamp type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
               format: date-time
               nullable: true
               readOnly: true
@@ -25596,11 +25613,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. For drive items, the display name might not always be available or up to date. For example, if a user changes their display name the API might show the new value in a future response, but the items associated with the user don''t show up as changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: 'Unique identifier for the identity or actor. For example, in the access reviews decisions API, this property might record the id of the principal, that is, the group, user, or application that''s subject to review.'
           nullable: true
       additionalProperties:
         type: object
@@ -35709,11 +35726,11 @@ components:
       properties:
         key:
           type: string
-          description: Contains the name of the field that a value is associated with.
+          description: Key.
           nullable: true
         value:
           type: string
-          description: Contains the corresponding value for the specified key.
+          description: Value.
           nullable: true
       additionalProperties:
         type: object
@@ -40306,6 +40323,7 @@ components:
       properties:
         clientAppId:
           type: string
+          description: The registration ID of the Microsoft Entra app ID associated with the teamsApp.
           nullable: true
         requiredPermissionSet:
           $ref: '#/components/schemas/microsoft.graph.teamsAppPermissionSet'
