--- a/openApiDocs/v1.0/Bookings.yml
+++ b/openApiDocs/v1.0/Bookings.yml
@@ -70,7 +70,7 @@ paths:
       tags:
         - solutions.Actions
       summary: Invoke action enable
-      description: Enable the Microsoft 365 Backup Storage service for a tenant.
+      description: 'Enable the Microsoft 365 Backup Storage service for a tenant. Before you call this API, call List protection policies to initialize the data store in the tenant. Data store initialization takes about 5 minutes. If you call this API before the data store is initialized, the call results in an error.'
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/backuprestoreroot-enable?view=graph-rest-1.0
@@ -102,7 +102,7 @@ paths:
       tags:
         - solutions.Actions
       summary: Invoke action activate
-      description: Activate a protectionPolicyBase.
+      description: 'Activate a protectionPolicyBase. Currently, only one active backup policy per underlying service is supported (that is, one for OneDrive accounts, one for SharePoint sites, and one for Exchange Online users). You can add or remove artifacts (sites or user accounts) to or from each active policy.'
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/protectionpolicybase-activate?view=graph-rest-1.0
@@ -203,7 +203,7 @@ paths:
       tags:
         - solutions.Actions
       summary: Invoke action activate
-      description: Activate a draft restoreSessionBase object.
+      description: 'Activate a draft restoreSessionBase object. The following points apply to restoring a protection unit:'
       externalDocs:
         description: Find more info here
         url: https://learn.microsoft.com/graph/api/restoresessionbase-activate?view=graph-rest-1.0
